refactored rename