@@ -2,6 +2,7 @@ package net.cserny.rename;
 
 import lombok.extern.slf4j.Slf4j;
 import net.cserny.DataMapper;
+import net.cserny.generated.MediaDescriptionData;
 import net.cserny.generated.MediaFileType;
 import net.cserny.generated.MediaRenameOrigin;
 import net.cserny.generated.RenamedMediaOptions;
@@ -13,7 +14,6 @@ import org.springframework.stereotype.Component;
 import java.time.ZoneOffset;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Order(1)
@@ -35,22 +35,16 @@ public class OnlineCacheSearcher implements Searcher {
             items = repository.findByNameYearAndType(nameYear.name(), nameYear.year(), type.getValue());
         }
 
-        List<MediaDescription> mediaDescriptions = items.stream()
-                .map(this::convert)
-                .collect(Collectors.toList());
+        List<MediaDescriptionData> mediaDescriptions = items.stream().map(this::convert).toList();
 
         return new RenamedMediaOptions().origin(MediaRenameOrigin.CACHE)
-                .mediaDescriptions(mediaDescriptions.stream().map(DataMapper.INSTANCE::descriptionToDescriptionData).toList());
+                .mediaDescriptions(mediaDescriptions);
     }
 
-    private MediaDescription convert(OnlineCacheItem item) {
+    private MediaDescriptionData convert(OnlineCacheItem item) {
         String date = item.getDate() == null ? null : utcDateFormatter.format(item.getDate());
-        return new MediaDescription(
-                item.getCoverPath(),
-                item.getTitle(),
-                date,
-                item.getDescription(),
-                item.getCast()
-        );
+        return new MediaDescriptionData().posterUrl(item.getCoverPath())
+                .title(item.getTitle()).date(date).description(item.getDescription())
+                .cast(item.getCast());
     }
 }
